--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
         font-family: 'Inter';
 }
 .primeira_cessao_hearder{
-        background-image: url('/imagens/Background.png');   /*esse comando cria uma imagem de fundo com o endereço da imagem*/
+        background-image: url('Background.png');   /*esse comando cria uma imagem de fundo com o endereço da imagem*/
         background-repeat: no-repeat;                       /*impede que a imagen se repita na parte de baixo*/
         background-size: contain;                           /* faz com que a imagem ocupe todo o espaço*/
         align-items: center;
