--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 :root{
        --cor-de-fundo:#00030C;
-       --cor-das-letras-brancas:#FFFFFF;
+       --cor-das-letras-brancas:pink;
        --cor-das-letras-cinza:#C0C0C0;
        --cor-de-fundo-do-botao:#167BF7;
        --cor-das-letras-cabecalho-vermelho:#EC2F46;
