--- a/style.css
+++ b/style.css
@@ -210,3 +210,75 @@ body{
         background-color: var(--cor-das-letras-cinza);
         color: var(--cor-das-letras-cabecalho-vermelho);
 }
+@media screen and (max-width:500px){
+
+        .conteiner{
+
+                background-image: none;
+                display: block;
+                text-align: center;
+                align-items: center;
+        }
+        .div{
+
+                margin:1rem;
+        }
+        .section_imagem{
+
+                width:50vw;
+        }
+        .conteiner__botao{
+
+                width: 80vw;
+        }
+        .primeira_cessao{
+
+                margin:1rem;
+        }
+        .segunda_cessao{
+
+                text-align: center;
+                margin:1rem;
+        }
+        .primeiro_botao_principal{
+
+                margin: 30px 0;
+        }
+        .terceira_cessao{
+
+                text-align: center;
+                margin: 1rem;
+        }
+        .terceira_div{
+
+                margin:1rem;
+        }
+        .dispositivos{
+
+                display: block;
+                margin:1rem;;
+        }
+        .dispositivos_lista{
+
+                display: block;
+        }
+        .rodape{
+
+                display: block;
+                text-align: center;
+                margin: 1rem;
+        }
+        .image_logo_rodape{
+
+                margin-top: 1rem;
+        }
+        .links{
+                display: block;
+                margin:1rem 0;
+        }
+        .lista_links{
+
+                margin: 1rem 0;
+        }
+}
+
